# ceto

./: .gitignore  API_MODERNIZATION_SUMMARY.md  README.md  pinned_results.json  pyproject.toml  requirements_dev.txt  setup.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  release.yml
cetos/: __init__.py  ais_adapter.py  energy_systems.py  enums.py  imo.py  models.py  utils.py
tests/: fixtures.py  test_ais_adapter.py  test_ais_adapter_pinned.py  test_analysis.py  test_energy_systems.py  test_energy_systems_pinned.py  test_imo.py  test_imo_pinned.py  test_integration_pinned.py  test_utils.py
