[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
name = "cetos"
description = "A Python package for analyzing vessel data."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache License 2.0" }
authors = [
  { name = "Luis Sanchez-Heres", email = "luis.sanchez-heres@ri.se" },
  { name = "Fredrik Olsson", email = "fredrik.x.olsson@ri.se" },
  { name = "Maritime Department - RISE" },
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = ["numpy", "scikit-learn"]

[project.urls]
Homepage = "https://github.com/RISE-Maritime/cetos"
Repository = "https://github.com/RISE-Maritime/cetos"
Issues = "https://github.com/RISE-Maritime/cetos/issues"

[dependency-groups]
dev = [
  "black>=23.3.0",
  "pytest>=7.3.1",
  "pytest-pinned>=0.4.2",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cetos*"]
exclude = ["tests*"]

[tool.setuptools-scm]
version_file = "cetos/_version.py"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "-v --strict-markers"
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["cetos"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
